Text Alignment Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ h2{
     
 }
 #main{
-    text-align-last: center
+    text-align: center
 }
 #playButton{
     text-align: center;
